# Learn2Synth

./: README.md  experiments.md  setup.cfg
doc/: derivation.md
learn2synth/: train.py
scripts/: best_epoch.py  postprocessing.py  test.py  train.sh  train_gaussian.py  train_gaussian_vary_vary_bias.py  train_learn2synth_debug.py  train_noise.py  train_noise.sh  train_noise_bias.py  train_noise_bias.sh  train_noise_bias_weight_no_empty.py  train_non_parametric.py  train_synthnet.py  train_synthseg_debug.ipynb  train_synthseg_debug.py  validation.py  validation.sh
