[metadata]
name = learn2synth
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = A training strategy for residual synthetizers
long_description = file:README.md
platforms = OS Independent
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/learn2synth

[options]
python_requires = >= 3.6
install_requires =
    torch >= 1.8
    pytorch_lightning
    cornucopia
    torch-distmap
    jsonargparse[signatures]
dependency_links =
    git+https://github.com/balbasty/cornucopia#egg=cornucopia
